# RecStore

./: .gitignore  .gitmodules  2026-04-04-grpc-module-explainer.md  AGENTS.md  CMakeLists.txt  README.md  mkdocs.yml  recstore_config.json  recstore_config_generator.py
.github/: cliff.toml  labeler.yml
.github/workflows/: ci-build.yml  ci-test.yml  doc-deploy.yml  doc-update-reminder.yml  docker-image-test.yml  docker-publish.yml  labeler.yml  release.yml  test.yml  ycsb.yml
ci/benchmark/: ycsb.sh
ci/docs/: check_updated_docs.py
ci/env/: ci_fix_config.sh  init_ycsb_env.sh
ci/pack/: pack_artifact.sh  test_pack_artifact.py
ci/schema/: recstore_config.schema.json
ci/test/: ctest_with_grpc.sh  run_coverage.sh  test_op.sh  test_ycsb.sh
dockerfiles/: build_torch_wheel.sh  init_dlrm.sh  init_env_inside_docker.sh  start_docker.sh
dockerfiles/docker_config/: .bashrc
dockerfiles/tests/: test_init_dlrm.py  test_torch_version_alignment.py
docs/: config.md  faq.md  quick_run.md  quickstart.md
docs/architecture/: overview.md
docs/calc/: embedding_modules.md  index.md  kvclient.md  op_interface.md  optimizer.md  pytorch_binding.md
docs/dev/: performance.md  testing.md  zero_config_run.md
docs/dev/feature/: add_operator.md  kvengine_config_naming_cleanup.md  kvengine_index_architecture.md
docs/dev/tests/: client_test.md  dist_emb_test.md  ebc_precision.md  tools.md
docs/parameter_server/: base.md  brpc.md  grpc.md  index.md  proto.md  rdma.md
docs/perf_reports/: 2026-04-27-hierkv-rs-demo-baseline.md
docs/storage/: basekv.md  cacheps.md  index.md  kv_engines.md  memory.md
docs/superpowers/plans/: 2026-03-26-manual-release-workflow.md
model_zoo/rs_demo/: README.md  __init__.py  cli.py  config.py  run_mock_stress.py  run_nproc_compare.py
model_zoo/rs_demo/data/: __init__.py  dlrm_source.py
model_zoo/rs_demo/runners/: __init__.py  base.py  recstore_runner.py  torchrec_runner.py
model_zoo/rs_demo/runtime/: __init__.py  aligned_training.py  hybrid_dlrm.py  recstore_distributed.py  report.py  server.py  torchrec_aggregate.py  torchrec_compare.py  torchrec_profile.py  torchrec_trace_report.py
model_zoo/torchrec_dlrm/: dlrm.py  launch_config.py  report_uploader.py  requirements.txt  run_single_day.sh
src/: CMakeLists.txt
src/base/: CMakeLists.txt  flatc.h
src/base_ps/: cache_ps_impl.h
src/benchmark/: CMakeLists.txt  benchmark_client.cc  benchmark_client_common.h  parse_dataset.h  ps_transport_benchmark.cc  ps_transport_benchmark_config.h  recstore_mixed_benchmark.cc
src/framework/: CMakeLists.txt  op.cc  op.h  op_mock.cc  ps_client_factory.h  rdma_ps_client_adapter.cc  rdma_ps_client_adapter.h
src/framework/common/: ps_client_config_adapter.cc  ps_client_config_adapter.h
src/framework/hugectr/: hierkv_backend.cc  op_hugectr.cc
src/framework/pytorch/: CMakeLists.txt  op_torch.cc
src/framework/pytorch/python_client/: client_test.py
src/framework/tensorflow/: CMakeLists.txt
src/grpc_ps/: CMakeLists.txt  brpc_ps_server.cpp  grpc_ps_server.cpp  ps_server.cpp
src/memory/: CMakeLists.txt  malloc.h  memory_factory.h  shm_file.cc
src/optimizer/: CMakeLists.txt  optimizer.cpp  optimizer.h  sparse_tensor.cpp  sparse_tensor.h
src/ps/: CMakeLists.txt  PS_MODULE_SUMMARY.md  provider.h  ps_client.md  ps_server.cpp  report_client.h
src/ps/base/: CMakeLists.txt  Postoffice.cc  Postoffice.h  base_client.h  base_ps_server.h  cache_ps_impl.h  config.cc  config.h  parameters.cpp  parameters.h
src/ps/brpc/: CMakeLists.txt  brpc_ps_client.cpp  brpc_ps_client.h  brpc_ps_client_test.cpp  brpc_ps_server.cpp  brpc_ps_server.h  dist_brpc_ps_client.cpp  dist_brpc_ps_client.h  dist_brpc_ps_client_test.cpp
src/ps/grpc/: CMakeLists.txt  dist_grpc_ps_client.cpp  dist_grpc_ps_client.h  dist_grpc_ps_client_test.cpp  grpc_ps_bench.cpp  grpc_ps_client.cpp  grpc_ps_client.h  grpc_ps_client_pytorch.cpp  grpc_ps_client_test.cpp  grpc_ps_server.cpp  grpc_ps_server.h  ps_server.md
src/ps/local_shm/: CMakeLists.txt  local_shm_client.cpp  local_shm_client.h  local_shm_futex.cpp  local_shm_layout.h  local_shm_protocol.h  local_shm_queue.cpp  local_shm_queue.h  local_shm_region.cpp  local_shm_region.h  local_shm_server.cpp  local_shm_server.h
src/ps/proto/: CMakeLists.txt  ps.proto  ps_brpc.proto
src/ps/rdma/: CMakeLists.txt  allshards_ps_client.cc  allshards_ps_client.h  base_client.h  petps_client.cc  petps_client.h  petps_integration_test.cpp  petps_magic.h  petps_server.cc  rdma_protocol.h  rdma_ps_client_adapter.cc  rdma_ps_client_adapter.h  rdma_status.h
src/storage/: CMakeLists.txt
src/storage/io_backend/spdk/: CMakeLists.txt  spdk_backend.cpp
src/test/: CMakeLists.txt  test_allshards_ps_client.cpp  test_cceh.cpp  test_engine_cceh.cpp  test_engine_extendible_hash.cpp  test_extendible_hash.cpp  test_factory.cpp  test_hugectr_emb.cpp  test_index.cpp  test_io_backend.cpp  test_local_shm_futex.cpp  test_local_shm_op_component.cpp  test_local_shm_protocol.cpp  test_local_shm_ps_client.cpp  test_local_shm_region.cpp  test_ps_client_factory.cpp  test_ps_transport_benchmark.cpp  test_rdma_protocol.cpp  test_report.cpp  test_storage_cache_lru.cpp
src/test/ps/brpc/: brpc_ps_client_test.cpp  dist_brpc_ps_client_test.cpp
src/test/ps/grpc/: dist_grpc_ps_client_test.cpp  grpc_ps_client_test.cpp
src/test/scripts/: analyze_embupdate_stages.py  local_memcached_server.py  petps_cluster_runner.py  ps_server_helpers.py  ps_server_runner.py  ps_test_config.py  run_hierkv_recstore_mixed_benchmark.py  run_local_shm_mixed_benchmark.py  run_petps_integration.py  run_petps_server.py  run_rdma_transport_benchmarks.py  test_petps_cluster_runner.py  test_ps_server_helpers.py  test_run_hierkv_recstore_mixed_benchmark.py  test_run_local_shm_mixed_benchmark.py  test_run_petps_integration.py  test_run_rdma_transport_benchmarks.py
src/test/server_mgr/: CMakeLists.txt  ps_server_launcher.cpp  ps_server_launcher.h  test_ps_server_launcher.cpp
src/test/small_tests/: CMakeLists.txt
src/test/small_tests/test_gpu_driver_component/: gpreempt.h
tools/benchmarks/: lanes.py
(+98 files in other folders)
